--- a/src/app/fcomponents/pages/homepage/homepage.component.html
+++ b/src/app/fcomponents/pages/homepage/homepage.component.html
@@ -40,16 +40,16 @@
             <!--PC screen-->
             <div class="d-none d-md-block">
               <div class="row">
-                <div class="col-3" *ngFor="let spe of specials">
+                <div class="col-3 pecail-wrapper" *ngFor="let spe of specials">
                   <div class="h490" *ngIf="spe.productMedia[0]">
-                      <img src="{{baseImageLink}}{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
-                    </div>
+                    <img src="{{baseImageLink}}{{spe.productMedia[0].url}}" [routerLink]="[ '/product/', spe.prodId]">
+                  </div>
                   <div class="s1 specialProductTitle" [routerLink]="[ '/product/', spe.prodId]">{{spe.title}}</div>
-                  <div>
-                    <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount == null">Price: ${{spe.price}}</span>
-                    <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount >= 0">Price: ${{spe.price - spe.discount}}</span>
-                    <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount == null" >Starting from: ${{spe.price}}</span>
-                    <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount >= 0" >Starting from: ${{spe.price - spe.discount}}</span>
+                  <div class="specialProductPrice ">
+                    <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount == null">Price: <span class="price">${{spe.price}}</span></span>
+                    <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount >= 0">Price: <span class="price">${{spe.price - spe.discount}}</span></span>
+                    <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount == null" ><span class="specailPrice">Starting</span> from: <span class="price">${{spe.price}}</span></span>
+                    <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount >= 0" ><span class="specailPrice">Starting</span> from: <span class="price">${{spe.price - spe.discount}}</span></span>
                     <!-- <s>${{spe.price}}</s> -->
                   </div>
                 </div><!--end col-3-->
@@ -62,12 +62,12 @@
                   <div class="h490" *ngIf="spe.productMedia[0]">
                     <img src="{{baseImageLink}}{{spe.productMedia[0].url}}" class="img100" [routerLink]="[ '/product/', spe.prodId]">
                   </div>
-                  <div class="s1">{{spe.title}}</div>
-                  <div>
-                      <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount == null">Price: ${{spe.price}}</span>
-                      <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount >= 0">Price: ${{spe.price - spe.discount}}</span>
-                      <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount == null" >Starting from: $ {{spe.price}}</span>
-                      <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount >= 0" >Starting from: $ {{spe.price - spe.discount}}</span>
+                  <div class="s1 specialProductTitle">{{spe.title}}</div>
+                  <div class="specialProductPrice">
+                      <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount == null">Price: <span class="price">${{spe.price}}</span></span>
+                      <span class="s2 mr-3" *ngIf="spe.productDetail.length==0 && spe.discount >= 0">Price: <span class="price">${{spe.price - spe.discount}}</span></span>
+                      <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount == null" ><span class="specailPrice">Starting</span> from: <span class="price">$ {{spe.price}}</span></span>
+                      <span class="s2 mr-3" *ngIf="spe.productDetail.length>0 && spe.discount >= 0" ><span class="specailPrice">Starting</span> from: <span class="price">$ {{spe.price - spe.discount}}</span></span>
                       <!-- <s>${{spe.price}}</s> -->
                   </div>
                 </div><!--end col-3-->
