--- a/src/app/fcomponents/basic/navbar/navbar.component.html
+++ b/src/app/fcomponents/basic/navbar/navbar.component.html
@@ -126,7 +126,7 @@
         </li>
 
       <!-- !Party Packages-->
-      <li class="nav-item">
+      <li class="nav-item nav-item-center">
         <a *ngIf="isBrowser==true" class="nav-link s2bold" routerLink='/packages' routerLinkActive="active">
           <h1 class="s2bold nav-link-title nav-link-title-space">Party Packages</h1>
         </a>
