--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -65,6 +65,6 @@
     <!-- copyright -->
     <div class=" ">
       <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019 </div>
-	  <div class="s2 text-center ml-2">Built by Spiritx</div>
+	  <div class="s2 text-center ml-2 brand">Built by Spiritx</div>
     </div>
   </div>
