--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -14,6 +14,9 @@
 .nav-item {
     margin: 0 10px;
 }
+.nav-item-center {
+    text-align: center;
+}
 .nav-item:hover .nav-link-title{
     color: #c48f45;
 }
