--- a/src/app/fcomponents/products/product/product.component.html
+++ b/src/app/fcomponents/products/product/product.component.html
@@ -161,12 +161,12 @@
 
 			<div class="row justify-content-end">
 				<!-- <div class="col-6 col-lg-4 alert alert-danger mt-3" role="alert" *ngIf="!isStockAvailable" >Only {{productDetail.availableStock}} left in stock.</div> -->
-				<div class="col-6 col-lg-4 alert alert-success mt-3" role="alert"
+				<div class="alert alert-success mt-3" role="alert"
 					*ngIf="isprodAdded && isStockAvailable">
-					Added into cart.
+					Item added,<br><b><a routerLink="/checkout">Go to shopping cart</a></b>
 				</div>
 				<!-- if quantity larger than available stock, then alert -->
-				<div class="col-12 invalid_feedback mt-3" role="alert" *ngIf="quantity > productDetail.availableStock">
+				<div class="col-12 invalid_feedback mt-4" role="alert" *ngIf="quantity > productDetail.availableStock">
 					Only
 					{{productDetail.availableStock}} are available. Please contact us if you need more!</div>
 			</div>
