fixed styles bugs

--- a/src/app/fcomponents/basic/navbar/navbar.component.css
+++ b/src/app/fcomponents/basic/navbar/navbar.component.css
@@ -85,6 +85,9 @@ a{
     .dropdown-menu{
         background-color: transparent;
     }
+    .nav-item-center {
+        text-align: left;
+    }
 }
 /* TODO: move to global css */
 @media (max-width: 991px) {
