--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -42,6 +42,9 @@ a{
     padding: 3px 0 10px 0;
     font-weight: 600;
 }
+.footer-icon {
+    min-width: 20px;
+}
 @media (max-width:767px) {
     .col-6{
         padding:5px;
