--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -48,16 +48,16 @@
       <div class="col-12 col-sm-6 col-lg-4 s2bold pl-md-3">
         <ul><span class="s1 text-white">Contact us</span>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="tel:02108793899"><i class="fas fa-phone-volume mr-3"></i> &nbsp; (64) 2108793899</a>
+            <a href="tel:02108793899"><i class="fas fa-phone-volume mr-3 footer-icon"></i> &nbsp; (64) 2108793899</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="mailto:luxedreameventhire@gmail.com"><i class="far fa-envelope mr-3"></i> &nbsp; info@luxedreameventhire.co.nz</a>
+            <a href="mailto:luxedreameventhire@gmail.com"><i class="far fa-envelope mr-3 footer-icon"></i> &nbsp; info@luxedreameventhire.co.nz</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="email:luxedreameventhire@gmail.com"><i class="fas fa-map-marker-alt mr-3"></i> &nbsp; Ashwood Ave, Dairy Flat, Auckland 0792</a>
+            <a href="email:luxedreameventhire@gmail.com"><i class="fas fa-map-marker-alt mr-3 footer-icon"></i> &nbsp; Ashwood Ave, Dairy Flat, Auckland 0792</a>
           </li>
           <li class="mt-md-2 pt-2 text-decoration-underline text-white-50">
-            <a href="email:luxedreameventhire@gmail.com"><i class="fab fa-weixin mr-3"></i> &nbsp; Wechat: LuxeDreamEventHire</a>
+            <a href="email:luxedreameventhire@gmail.com"><i class="fab fa-weixin mr-3 footer-icon"></i> &nbsp; Wechat: LuxeDreamEventHire</a>
           </li>
         </ul>
       </div>
