--- a/src/app/fcomponents/admin/admin-user-list/admin-user-list.component.css
+++ b/src/app/fcomponents/admin/admin-user-list/admin-user-list.component.css
@@ -2,6 +2,10 @@ th {
 	position: sticky;
 	top: -10px;
 }
+tbody > tr:hover {
+	 color: #c48f45;
+	 cursor: default;
+}
 .far.fa-edit:hover {
 	color:rgb(55, 162, 233);
 	cursor: pointer;
