--- a/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.css
+++ b/src/app/fcomponents/user-dashboard/user-profile/user-profile.component.css
@@ -8,8 +8,11 @@ span {
 	color: #c48f45;
 }
 form {
-	width: 50%;
 	margin: 0 auto;
+}
+mat-form-field {
+	margin: 0 auto;
+	width: 60%;
 }
 .card {
 	min-height: 350px;
@@ -28,13 +31,22 @@ form {
 }
 .slide {
 	margin: 0 auto;
-	margin: 30px 0px 30px 0px;
+	margin: 15px 0px 30px 0px;
 	text-align: center;
 }
 .primaryButton {
 	background-color: #c48f45;
 	color: white;
 }
+#comment {
+	text-align: left;
+	width: 80%;
+}
+#comment > div {
+	max-height: 120px;
+	overflow: scroll;
+	padding: 3%;
+} 
 #buttonsWrap {
 	margin: 0 auto;
 	text-align: center;
