--- a/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-cart/shopping-cart.component.html
@@ -17,10 +17,11 @@
 			(bsValueChange)="onReturnChange($event)">
 	</div>
 </div>
-<div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="!isTimeSame && prodsInCart.length!=0" >
+<div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="!isTimeSame && prodsInCart.length!=0">
 	{{errorMessage}}</div>
 <div class="alert alert-danger mt-2 mb-2" role="alert" *ngIf="isAlert && isShoppingCartValid">
-	Customer Service will confirm this order with you. You can get <span style="font-size: large;">instant confirmation</span> if you book from Friday to Monday.
+	Customer Service will confirm this order with you. You can get <span style="font-size: large;">instant
+		confirmation</span> if you book from Friday to Monday.
 </div>
 <hr>
 <div class="row mb-3 productdiv" *ngFor="let prod of prodsInCart; index as i">
@@ -53,8 +54,11 @@
 	<br>
 </div>
 <div class="text-right" *ngIf="totalPrice!=0 &&isShoppingCartValid">
-	<div class="mb-1">Rental Deposit <span style="color:red">Due Now</span>: NZ $<span
-			class="s2bold">{{depositFeeDue}}</span></div>
+	<div class="mb-1" *ngIf="showCoupon">Coupon Code : <input #coupon><button class="ml-2" (click)="checkCoupon(coupon)">Apply</button></div>
+	<mat-error *ngIf="showCouponError">Coupon is not Valid!</mat-error>
+	<div *ngIf="isCouponValid"><span style="color:green">Coupon is Valid!</span> <button class="ml-2" (click)="cancelCoupon()">Cancel</button></div>
+	<div class="mb-1">
+		Rental Deposit <span style="color:red">Due Now</span>: NZ $<span class="s2bold">{{depositFeeDue}}</span></div>
 	<div class="mb-1">Rental Due at Delivery or Pick-up: NZ $<span class="s2bold">{{depositFeeDue}}</span></div>
 	<div class="mb-1">Bond Due at Delivery or Pick-up: NZ $<span class="s2bold">{{bondFee}}</span></div>
 	<div class="mb-1" *ngIf="deliveryControl">Delivery Fee <span style="color:red">Due now</span>: NZ $<span
