--- a/src/app/fcomponents/basic/user-dialog/popup-dialog/popup-dialog.component.html
+++ b/src/app/fcomponents/basic/user-dialog/popup-dialog/popup-dialog.component.html
@@ -1,6 +1,6 @@
 <!-- Sign up form for users -->
 <div class=wrap>
-	<div id="logowrap">
+	<div id="LogoWrap">
 		<img src="../../../../assets/images/Asset1-4x-mid.png" alt="logo" width="100px">
 		<hr>
 		<h5 mat-dialog-title>Welcome to Luxe Dream!</h5>
@@ -20,11 +20,12 @@
 				<input matInput placeholder="How did you find about us?" formControlName="channel">
 			</mat-form-field>
 		</mat-dialog-content>
+		<div style="color:#c48f45">Subscribe to your mailing list now to get 10% off your next order !</div>
 		<mat-dialog-actions>
 			<div id="ButtonsWrap" class="mb-3">
 				<button mat-raised-button color="basic" mat-dialog-close>Cancel</button>
 				<button mat-raised-button type="submit" [disabled]="!this.informationForm.valid"
-					class="mx-2 primaryButton">Submit</button>
+					class="mx-2 primaryButton">Subscribe</button>
 			</div>
 		</mat-dialog-actions>
 		<hr>
