--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.css
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.css
@@ -22,3 +22,12 @@
     0% { transform: rotate(0deg); }
     100% { transform: rotate(360deg); }
   }
+  a{
+    text-decoration: none;
+	color: inherit;
+	cursor: pointer;
+} 
+.primaryButton {
+  background-color: #c48f45;
+  color: white;
+}
