--- a/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
+++ b/src/app/fcomponents/shopping-checkout/shopping-userinfo/shopping-userinfo.component.html
@@ -16,9 +16,10 @@
       <div class="invalid_feedback" *ngIf=" FirstName.errors?.minlength && FirstName.touched ">
          Your first name shall be at least 2 characters
       </div>
-      <input class="form-control s2" type="FirstName" [disabled]="!isShoppingCartValid" required minlength="2" name="FirstName"
-         placeholder="Enter your first name" [ngClass]="{'is-invalid':FirstName.errors?.required && FirstName.touched}"
-         [(ngModel)]="userInfo.FirstName" #FirstName="ngModel">
+      <input class="form-control s2" type="FirstName" [disabled]="!isShoppingCartValid" required minlength="2"
+         name="FirstName" placeholder="Enter your first name"
+         [ngClass]="{'is-invalid':FirstName.errors?.required && FirstName.touched}" [(ngModel)]="userInfo.FirstName"
+         #FirstName="ngModel">
    </div>
 
    <!-- last name -->
@@ -29,19 +30,20 @@
       <div class="invalid_feedback" *ngIf=" LastName.errors?.minlength && LastName.touched ">
          Your last shall be at least 2 characters
       </div>
-      <input class="form-control s2" type="LastName" [disabled]="!isShoppingCartValid" required minlength="2" name="LastName"
-         placeholder="Enter your last name" [ngClass]="{'is-invalid':LastName.errors?.required && LastName.touched}"
-         [(ngModel)]="userInfo.LastName" #LastName="ngModel">
+      <input class="form-control s2" type="LastName" [disabled]="!isShoppingCartValid" required minlength="2"
+         name="LastName" placeholder="Enter your last name"
+         [ngClass]="{'is-invalid':LastName.errors?.required && LastName.touched}" [(ngModel)]="userInfo.LastName"
+         #LastName="ngModel">
    </div>
    <!-- Email -->
    <div class="form-group ">
       <div class="invalid_feedback" *ngIf="Email.errors?.required && Email.touched ">Please enter your
          E-mail</div>
       <div class="invalid_feedback" *ngIf="Email.errors?.pattern && Email.touched">Incorrect Email entered</div>
-      <input class="form-control s2" type="Email" [disabled]="!isShoppingCartValid" required pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[a-z]{2,3}$"
-         minlength="6" name="Email" placeholder="Enter your email"
-         [ngClass]="{'is-invalid':Email.errors?.required && Email.touched}" [(ngModel)]="userInfo.Email"
-         #Email="ngModel">
+      <input class="form-control s2" type="Email" [disabled]="!isShoppingCartValid" required
+         pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[a-z]{2,3}$" minlength="6" name="Email"
+         placeholder="Enter your email" [ngClass]="{'is-invalid':Email.errors?.required && Email.touched}"
+         [(ngModel)]="userInfo.Email" #Email="ngModel">
    </div>
    <!-- phone number -->
    <div class="form-group ">
@@ -51,13 +53,14 @@
       <div class="invalid_feedback" *ngIf="PhoneNum.errors?.pattern && PhoneNum.touched">
          Please enter the correct phone number.
       </div>
-      <input class="form-control s2" type="tel" [disabled]="!isShoppingCartValid" required pattern="[0-9]{7,15}" minlength="7" name="PhoneNum"
-         placeholder="Enter your phone number" [ngClass]="{'is-invalid':PhoneNum.errors?.required && PhoneNum.touched}"
-         [(ngModel)]="userInfo.PhoneNum" #PhoneNum="ngModel">
+      <input class="form-control s2" type="tel" [disabled]="!isShoppingCartValid" required pattern="[0-9]{7,15}"
+         minlength="7" name="PhoneNum" placeholder="Enter your phone number"
+         [ngClass]="{'is-invalid':PhoneNum.errors?.required && PhoneNum.touched}" [(ngModel)]="userInfo.PhoneNum"
+         #PhoneNum="ngModel">
    </div>
    <!-- company -->
-   <div class="form-group "><input class="form-control s2" type="text" [disabled]="!isShoppingCartValid" placeholder="Company(optional)"
-         [(ngModel)]="userInfo.company" name="company"></div>
+   <div class="form-group "><input class="form-control s2" type="text" [disabled]="!isShoppingCartValid"
+         placeholder="Company(optional)" [(ngModel)]="userInfo.company" name="company"></div>
    <!-- city -->
    <div class="form-group ">
       <div class="invalid_feedback" *ngIf="city.errors?.required && city.touched">Please enter your city
@@ -65,8 +68,9 @@
       <div class="invalid_feedback" *ngIf=" city.errors?.minlength && city.touched ">
          Please enter a correct city.
       </div>
-      <input class="form-control s2" type="city" [disabled]="!isShoppingCartValid" required minlength="2" name="city" placeholder="Event city"
-         [ngClass]="{'is-invalid':city.errors?.required && city.touched}" [(ngModel)]="userInfo.city" #city="ngModel">
+      <input class="form-control s2" type="city" [disabled]="!isShoppingCartValid" required minlength="2" name="city"
+         placeholder="Event city" [ngClass]="{'is-invalid':city.errors?.required && city.touched}"
+         [(ngModel)]="userInfo.city" #city="ngModel">
    </div>
 
    <!-- street address -->
@@ -77,14 +81,14 @@
       <div class="invalid_feedback" *ngIf=" streetAddress.errors?.minlength && streetAddress.touched ">
          Please enter a corrct address.
       </div>
-      <input class="form-control s2" type="streetAddress" [disabled]="!isShoppingCartValid" required minlength="2" name="streetAddress"
-         placeholder="Event street address"
+      <input class="form-control s2" type="streetAddress" [disabled]="!isShoppingCartValid" required minlength="2"
+         name="streetAddress" placeholder="Event street address"
          [ngClass]="{'is-invalid':streetAddress.errors?.required && streetAddress.touched}"
          [(ngModel)]="userInfo.streetAddress" #streetAddress="ngModel">
    </div>
    <br>
    <!--pick up or delivery-->
-   <mat-radio-group [disabled]="!isShoppingCartValid"required aria-label="Select an option">
+   <mat-radio-group [disabled]="!isShoppingCartValid" required aria-label="Select an option">
       <mat-radio-button (change)="radioButtonChange($event)" color="primary" value="1">Pick-up</mat-radio-button>
       <mat-radio-button (change)="radioButtonChange($event)" color="primary" value="0">Delivery</mat-radio-button>
       <br>
@@ -114,18 +118,35 @@
       </mat-select>
    </mat-form-field>
    <mat-error *ngIf="timeError && isShoppingCartValid">Please select a time for pick-up/delivery </mat-error>
+   <br>
+   <mat-form-field class="timeform">
+      <mat-label>Select a desired return time</mat-label>
+      <mat-select required (selectionChange)="selectionChangeReturnTime($event)">
+         <mat-option value="9:00 am - 11:00 am">9:00 am - 11:00 am</mat-option>
+         <mat-option value="11:00 am - 2:00 pm">11:00 am - 2:00 pm</mat-option>
+         <mat-option value="2:00 pm - 5:00 pm">2:00 pm - 5:00 pm</mat-option>
+      </mat-select>
+   </mat-form-field>
+   <mat-error *ngIf="timeReturnError && isShoppingCartValid">Please select a time for return </mat-error>
    <hr>
    <!-- Message -->
    <div class="form-group">
-      <textarea class="form-control s2" [disabled]="!isShoppingCartValid" rows="5" type="Message" name="Message" placeholder="Send a message:"
-         [(ngModel)]="userInfo.Message" #Message="ngModel">
+      <textarea class="form-control s2" [disabled]="!isShoppingCartValid" rows="5" type="Message" name="Message"
+         placeholder="Send a message:" [(ngModel)]="userInfo.Message" #Message="ngModel">
                       </textarea>
    </div>
-
+   <br>
+   <div>
+      <mat-checkbox (change)="onCheckChange($event)" color="primary"></mat-checkbox>
+      <button class="primaryButton ml-3" (click)="openTCdialog()">Terms & Conditions</button>
+   </div>
+   <br>
+   <mat-error *ngIf="!termsRead &&isShoppingCartValid">Please read & check the Terms & Conditions box </mat-error>
+   <br>
    <div *ngIf="isShoppingCartValid && !isSendingEmail" class="invalid_feedback mb-4">{{feedback_message}}</div>
    <div class="row">
       <div class="col-12 text-center"><button class="btn btn-outline-gold btn-block" type="submit"
-            [disabled]="isSendingEmail || isCartEmpty || !isShoppingCartValid">Submit</button></div>
+            [disabled]="isSendingEmail || isCartEmpty || !isShoppingCartValid || !termsRead">Submit</button></div>
    </div>
 </form>
 <div *ngIf="paymentSpinnerControl" class="loader"></div>
