modified homepage styles

--- a/src/app/fcomponents/basic/footer/footer.component.html
+++ b/src/app/fcomponents/basic/footer/footer.component.html
@@ -15,11 +15,11 @@
 	
     <!-- imgs -->
     <div class="row mx-0 mx-md-5">
-      <div class="col-12 col-sm-4"><img class="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
+      <div class="col-12 col-sm-4 footer-img"><img class="imgBlocks" src="../../../../assets/images/footimg1.jpg" alt=""></div>
       <br>
-      <div class="col-12 col-sm-4"><img class="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
+      <div class="col-12 col-sm-4 footer-img"><img class="imgBlocks" src="../../../../assets/images/footimg2.jpg" alt=""></div>
       <br>
-      <div class="col-12 col-sm-4"><img class="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
+      <div class="col-12 col-sm-4 footer-img"><img class="imgBlocks" src="../../../../assets/images/footimg3.jpg" alt=""></div>
       <br>
       <!-- <div class="col-6 col-md-3"><img  class ="imgBlocks" src="../../../../assets/images/productImg2.jpeg" alt=""></div> -->
     </div>
@@ -64,8 +64,8 @@
       </div>
     </div>
     <!-- copyright -->
-    <div class=" ">
-      <div class="s2gold text-center ">&copy; Luxe Dream Event Hire 2019 </div>
-	  <div class="s2 text-center ml-2 brand">Built by Spiritx</div>
+    <div>
+      <div class="s2gold text-center copyright">&copy; Luxe Dream Event Hire 2019 </div>
+	    <!-- <div class="s2 text-center ml-2 brand">Built by Spiritx</div> -->
     </div>
   </div>
