--- a/src/app/fcomponents/basic/footer/footer.component.css
+++ b/src/app/fcomponents/basic/footer/footer.component.css
@@ -12,8 +12,7 @@ ul li a:hover{
 }
 .imgBlocks{
     width:100%;
-    max-height: 100%;
-    min-height: 380px;
+    min-height: 100%;
 }
 .fab.fa-facebook-square:hover{
     color: white;
@@ -36,7 +35,9 @@ a{
 .contactUs i{
     font-size: 18px;
 }
-
+.copyright {
+    padding-bottom: 20px;
+}
 .brand {
     font-size: 12px;
     padding: 3px 0 10px 0;
@@ -45,6 +46,7 @@ a{
 .footer-icon {
     min-width: 20px;
 }
+
 @media (max-width:767px) {
     .col-6{
         padding:5px;
