--- a/src/styles.css
+++ b/src/styles.css
@@ -114,7 +114,7 @@ body{
 
 .s1 {
   font-family: 'RobotoThin', serif;
-  font-size: 20px;
+  font-size: 1.5vw;
   font-weight: 400;
   color: #535353;
 }
@@ -142,7 +142,7 @@ body{
 
 .s2 {
   font-family: 'RobotoThin', serif;
-  font-size: 17px;
+  font-size: 1.5vw;
   font-weight: 450;
   color: #535353;
 }
